[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1.5.0"}
ethereum-types = {version = "*"}
lazy_static = {version = "*"}
rand = {version = "*"}
secp256k1 = {version = "*", features = ["global-context", "rand"]}
sha3 = {version = "*"}


